Сделал добавление данных в lockalStorage

--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
         </h3>
         <div class="form-add-group">
           <label class="form-add__label" for="FIO">ФИО</label>
-          <input class="form-control" type="text" id="FIO" name="FIO" placeholder="Исаак Исаакович Зильберштейн">
+          <input class="form-control" type="text" id="FIO" name="FIO" placeholder="Зильберштейн Исаак Исаакович">
         </div>
         <div class="form-add-group">
           <label class="form-add__label" for="faculty">Факультет</label>
-          <input class="form-control" type="text" id="faculty" placeholder="Экономика">
+          <input class="form-control" type="text" id="faculty" name="faculty" placeholder="Экономика">
         </div>
         <div class="form-add-group">
           <label class="form-add__label" for="DOB">Дата рождения</label>
