--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
           </div>
         </div>
       </form>
-      <table class="table table-striped table-bordered table-hover tabel-students">
+      <table class="table table-striped table-bordered table-hover table-students">
         <thead>
           <tr>
             <th scope="col">#</th>
@@ -77,7 +77,7 @@
           </tr>
         </thead>
         <tbody>
-          <tr>
+          <tr id="1">
             <th scope="row">1</th>
             <td>Mark</td>
             <td>Otto</td>
