--- a/index.html
+++ b/index.html
@@ -69,11 +69,11 @@
       <table class="table table-striped table-bordered table-hover table-students">
         <thead>
           <tr>
-            <th scope="col">#</th>
-            <th scope="col">ФИО</th>
-            <th scope="col">Факультет</th>
-            <th scope="col">Дата рождения</th>
-            <th scope="col">Годы обучения</th>
+            <th class="table-th__num" scope="col">#</th>
+            <th class="table-th__fio" scope="col">ФИО</th>
+            <th class="table-th__faculty" scope="col">Факультет</th>
+            <th class="table-th__DOB" scope="col">Дата рождения</th>
+            <th class="table-th__years-of-study" scope="col">Годы обучения</th>
           </tr>
         </thead>
         <tbody>
