--- a/index.html
+++ b/index.html
@@ -5,9 +5,8 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="css/bootstrap.min.css">
+  <link rel="stylesheet" href="css/style.css">
   <script src="main.js"></script>
   <title>CRM</title>
 </head>
@@ -43,38 +42,38 @@
         </button>
       </form>
     </div>
-    <div class="tabel-wrapper">
-      <form class="tabel-filter mb-3">
-        <h3 class="tabel-filter__heading">
+    <div class="table-wrapper">
+      <div class="table-filter mb-3">
+        <h3 class="table-filter__heading">
           Найти студента:
         </h3>
-        <div class="form-row align-items-center d-flex tabel-filter__content">
+        <div class="form-row align-items-center d-flex table-filter__content">
           <div class="col-auto table-filter__input-cont">
-            <input type="text" class="form-control" name="FIO-filter" placeholder="Имя/Фамилия/Отчество">
-            <button class="table-filter__submit table-search">
+            <input type="text" class="form-control" name="FIO-filter" value="" placeholder="Имя/Фамилия/Отчество">
+            <button class="table-filter__submit table-search" id="FIO-filter">
               <img class="table-search__img" src="img/search.svg" alt="Искать">
             </button>
           </div>
           <div class="col-auto table-filter__input-cont">
             <input type="text" class="form-control" name="faculty-filter" placeholder="Факультет">
-            <button class="table-filter__submit table-search">
+            <button class="table-filter__submit table-search" id="faculty-filter">
               <img class="table-search__img" src="img/search.svg" alt="Искать">
             </button>
           </div>
           <div class="col-auto table-filter__input-cont">
-            <input type="text" class="form-control" name="dataIn-filter" placeholder="Год поступления">
-            <button class="table-filter__submit table-search">
+            <input type="text" class="form-control" name="dateIn-filter" placeholder="Год поступления">
+            <button class="table-filter__submit table-search" id="dateIn-filter">
               <img class="table-search__img" src="img/search.svg" alt="Искать">
             </button>
           </div>
           <div class="col-auto table-filter__input-cont">
-            <input type="text" class="form-control" name="dataOut-filter" placeholder="Год выпуска">
-            <button class="table-filter__submit table-search">
+            <input type="text" class="form-control" name="dateOut-filter" placeholder="Год выпуска">
+            <button class="table-filter__submit table-search" id="dateOut-filter">
               <img class="table-search__img" src="img/search.svg" alt="Искать">
             </button>
           </div>
         </div>
-      </form>
+      </div>
       <table class="table table-striped table-bordered table-hover table-students">
         <thead>
           <tr>
